@@ -221,7 +221,6 @@ flumotion/ui/__init__.py
 flumotion/ui/simplewizard.py
 flumotion/ui/kiwipatches.py
 flumotion/wizard/consumptionsteps.py
-flumotion/wizard/enums.py
 flumotion/wizard/save.py
 flumotion/wizard/models.py
 flumotion/wizard/worker.py
