@@ -1,3 +1,12 @@
+2008-02-29  Johan Dahlin  <jdahlin@async.com.br>
+
+	* flumotion/wizard/Makefile.am:
+	* flumotion/wizard/configurationwizard.py:
+	* flumotion/wizard/enums.py:
+	* po/POTFILES.in:
+	Get rid of LicenseType and use prefill directly.
+	Kill flumotion/wizard/enums.py!
+
 2008-02-29  Johan Dahlin  <johan@gnome.org>
 
 	* flumotion/test/test_wizard_save.py:
